# 2stage

./: CMakeLists.txt  README.md  doc.txt
2stage/: backend.h  compiler.h  compiler_context.h  context.h  decleration.h  dsl_compiler.h  eval.h  expr.h  expr_dsl.h  funamental.h  placeholders.h  statement.h  tag_maker.h  test_ctx_fixture.h  void_t.h
app/: example_prime.cpp
test/: test_dsl.cpp  test_expr.cpp  test_fib.cpp  test_function.cpp  test_fundamental.cpp  test_imbue.cpp  test_prime.cpp  test_stmt.cpp
